some implementations about the API (again) and some tests on navigation screens

--- a/app/src/main/res/layout/content_add_food_items.xml
+++ b/app/src/main/res/layout/content_add_food_items.xml
@@ -38,8 +38,8 @@
         android:layout_below="@+id/textView3"
         android:layout_marginTop="19dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="..." />
+        android:hint="Search..."
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/btnSearch"
@@ -53,11 +53,12 @@
         android:text="Search" />
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/foodItemsListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignLeft="@+id/txtSearch"
-        android:layout_alignStart="@+id/txtSearch"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/txtSearch"
         android:layout_marginTop="14dp" />
+
 </RelativeLayout>
