--- a/app/src/main/res/layout/content_recipe_book.xml
+++ b/app/src/main/res/layout/content_recipe_book.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:onClick="addRecipeButtonClickEventHandler"
         android:background="@drawable/ic_add" />
 
     <TextView
