--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,14 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Font sizes -->
+    <dimen name="header_h1_font_size">20sp</dimen>
+    <dimen name="header_h2_font_size">18sp</dimen>
+    <dimen name="header_h3_font_size">16sp</dimen>
+    <dimen name="normal_text_font_size">14sp</dimen>
+
+    <!-- Icons sizes -->
+    <dimen name="icon_size_small">25dp</dimen>
+
 </resources>
