--- a/app/src/main/res/layout/list_food_item_on_recipe.xml
+++ b/app/src/main/res/layout/list_food_item_on_recipe.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
     android:layout_marginTop="@dimen/activity_vertical_margin"
-    android:layout_marginBottom="@dimen/activity_vertical_margin">
+    android:gravity="center">
 
     <Button
         android:id="@+id/remove_item_button"
@@ -14,8 +14,8 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:onClick="removeItemButtonClickEventHandler"
-        android:background="@android:drawable/ic_menu_delete" />
+        android:background="@android:drawable/ic_menu_delete"
+        android:onClick="removeItemButtonClickEventHandler" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -30,17 +30,18 @@
             android:id="@+id/food_name_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:text="@string/food_item"
-            android:textSize="@dimen/header_h2_font_size" />
+            android:textSize="@dimen/normal_text_font_size" />
 
         <TextView
             android:id="@+id/food_measure_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="3dp"
             android:text="@string/measurement"
-            android:textSize="@dimen/normal_text_font_size" />
+            android:textSize="@dimen/small_text_font_size" />
     </LinearLayout>
 
     <TextView
@@ -52,7 +53,7 @@
         android:layout_toLeftOf="@+id/quantity_edit_text"
         android:layout_toStartOf="@+id/quantity_edit_text"
         android:text="@string/qt"
-        android:textSize="@dimen/header_h3_font_size" />
+        android:textSize="@dimen/normal_text_font_size" />
 
     <EditText
         android:id="@+id/quantity_edit_text"
@@ -63,10 +64,10 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:ems="10"
-        android:inputType="number"
-        android:maxLength="2"
+        android:inputType="numberDecimal"
+        android:maxLength="5"
         android:maxLines="1"
         android:selectAllOnFocus="true"
-        android:textSize="@dimen/normal_text_font_size" />
+        android:textSize="@dimen/small_text_font_size" />
 
 </RelativeLayout>
