--- a/app/src/main/res/layout/activity_add_food_recipe.xml
+++ b/app/src/main/res/layout/activity_add_food_recipe.xml
@@ -20,8 +20,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
-    <include layout="@layout/content_add_food_recipe" />
+    <include layout="@layout/content_add_food_recipe"
+        android:id="@+id/include" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -36,7 +36,7 @@
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_gravity="bottom|center_horizontal"
         android:background="@color/colorPrimaryDark"
         app:itemIconTint="@color/colorPrimary"
         app:itemTextColor="@color/colorPrimary"
