--- a/app/src/main/res/layout/list_food_recipe.xml
+++ b/app/src/main/res/layout/list_food_recipe.xml
@@ -20,13 +20,13 @@
         android:id="@+id/recipe_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginStart="45dp"
         android:layout_marginTop="25dp"
-        android:layout_toEndOf="@+id/letter_text_view"
-        android:layout_toRightOf="@+id/letter_text_view"
         android:text="Recipe Name"
         android:textSize="20sp" />
 </RelativeLayout>
