--- a/app/src/main/res/layout/list_food_item_on_recipe.xml
+++ b/app/src/main/res/layout/list_food_item_on_recipe.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="@dimen/activity_vertical_margin"
+    android:onClick="editItemQuantityClickEventHandler"
     android:layout_marginTop="@dimen/activity_vertical_margin"
     android:gravity="center">
 
@@ -18,6 +19,7 @@
         android:onClick="removeItemButtonClickEventHandler" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -50,24 +52,19 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:layout_toLeftOf="@+id/quantity_edit_text"
-        android:layout_toStartOf="@+id/quantity_edit_text"
+        android:layout_toLeftOf="@+id/quantity_text_view"
+        android:layout_toStartOf="@+id/quantity_text_view"
         android:text="@string/qt"
         android:textSize="@dimen/normal_text_font_size" />
 
-    <EditText
-        android:id="@+id/quantity_edit_text"
+    <TextView
+        android:id="@+id/quantity_text_view"
         android:layout_width="35dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        android:maxLength="5"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
         android:textSize="@dimen/small_text_font_size" />
 
 </RelativeLayout>
