--- a/app/src/main/res/layout/content_recipe_book.xml
+++ b/app/src/main/res/layout/content_recipe_book.xml
@@ -75,6 +75,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginStart="10dp"
+            android:onClick="searchRecipeButtonClickEventHandler"
             android:background="@drawable/ic_search_black_24dp"
             android:backgroundTint="@color/darkGreen" />
 
