lots again (meals)

--- a/app/src/main/res/layout/activity_day_view.xml
+++ b/app/src/main/res/layout/activity_day_view.xml
@@ -29,130 +29,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <android.support.percent.PercentRelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/message"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/darkGrey"
-                android:padding="@dimen/header_h1_font_size"
-                android:text="@string/title_activity_day_view"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="@dimen/header_h1_font_size"
-                app:layout_heightPercent="25%"
-                android:gravity="center"/>
-
-            <TextView
-                android:id="@+id/breakfast"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/message"
-                android:background="@color/darkGreen"
-                android:text="Breakfast"
-                android:textColor="@color/white"
-                android:textSize="@dimen/header_h2_font_size"
-                app:layout_heightPercent="10%"
-                android:gravity="center"
-                android:textAlignment="viewStart"
-                android:paddingLeft="10sp"/>
-
-            <ScrollView
-                android:id="@+id/breakfastScroll"
-                android:layout_width="match_parent"
-                android:layout_height="58sp"
-                app:layout_heightPercent="15%"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/breakfast">
-
-                <TextView
-                    android:id="@+id/breakfastMeals"
-                    android:layout_width="match_parent"
-                    android:layout_height="24sp"
-                    android:text="Avocado Toast\n\nOrange Juice"
-                    android:textSize="@dimen/normal_text_font_size"
-                    android:paddingLeft="10sp"/>
-            </ScrollView>
-
-            <TextView
-                android:id="@+id/lunch"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:text="Lunch"
-                android:textColor="@color/colorBackgroundForm"
-                android:textSize="@dimen/header_h2_font_size"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/breakfastScroll"
-                app:layout_heightPercent="10%"
-                android:gravity="center"
-                android:textAlignment="viewStart"
-                android:paddingLeft="10sp"/>
-            <ScrollView
-                android:id="@+id/lunchScroll"
-                android:layout_width="match_parent"
-                android:layout_height="58sp"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/lunch"
-                app:layout_heightPercent="15%">
-
-                <TextView
-                    android:id="@+id/lunchMeals"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Dynamite Roll\n\nSalmon Sashimi\n\nGreen Salad"
-                    android:textSize="@dimen/normal_text_font_size"
-                    android:layout_below="@+id/dinner"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:paddingLeft="10sp"/>
-
-            </ScrollView>
-            <TextView
-                android:id="@+id/dinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:text="Dinner"
-                android:textColor="@color/colorBackgroundForm"
-                android:textSize="@dimen/header_h2_font_size"
-                android:layout_below="@+id/lunchScroll"
-                android:layout_alignParentLeft="true"
-                app:layout_heightPercent="10%"
-                android:gravity="center"
-                android:textAlignment="viewStart"
-                android:paddingLeft="10sp"/>
-            <ScrollView
-                android:id="@+id/dinnerScroll"
-                android:layout_width="match_parent"
-                android:layout_height="58sp"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/dinner"
-                app:layout_heightPercent="15%">
-
-                <TextView
-                    android:id="@+id/dinnerMeals"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Stir Fry\n\nGreen Salad\n\nMilk"
-                    android:textSize="@dimen/normal_text_font_size"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:paddingLeft="10sp"/>
-
-            </ScrollView>
-
-
-
-
-
-
-        </android.support.percent.PercentRelativeLayout>
+        <include layout="@layout/content_day_view"/>
 
     </FrameLayout>
 
