--- a/app/src/main/res/layout/content_day_view.xml
+++ b/app/src/main/res/layout/content_day_view.xml
@@ -1,11 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="10"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.mmeh.peal.DayView"
-    tools:showIn="@layout/activity_day_view">
+    tools:context="com.mmeh.peal.DayView">
 
-</android.support.constraint.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/day_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_weight="1"
+        android:background="@color/darkGrey"
+        android:padding="@dimen/header_h1_font_size"
+        android:text="@string/title_activity_day_view"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="@dimen/header_h1_font_size" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/breakfast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/darkGreen"
+            android:onClick="viewBreakfastClickEventHandler"
+            android:paddingLeft="10sp"
+            android:paddingRight="0sp"
+            android:text="Breakfast"
+            android:textColor="@color/white"
+            android:textSize="@dimen/header_h2_font_size" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/breakfast_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </ScrollView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/lunch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:onClick="viewLunchClickEventListener"
+            android:paddingLeft="10sp"
+            android:paddingRight="0sp"
+            android:text="Lunch"
+            android:textColor="@color/colorBackgroundForm"
+            android:textSize="@dimen/header_h2_font_size" />
+
+        <ScrollView
+            android:id="@+id/lunchScroll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/lunch_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </ScrollView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/dinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:onClick="viewDinnerClickEventListener"
+            android:paddingLeft="10sp"
+            android:paddingRight="0sp"
+            android:text="Dinner"
+            android:textColor="@color/colorBackgroundForm"
+            android:textSize="@dimen/header_h2_font_size" />
+
+        <ScrollView
+            android:id="@+id/dinnerScroll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/dinner_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </ScrollView>
+
+    </LinearLayout>
+
+
+</LinearLayout>
