--- a/app/src/main/res/layout/content_meal_view.xml
+++ b/app/src/main/res/layout/content_meal_view.xml
@@ -59,12 +59,12 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="100dp">
 
             <ListView
                 android:id="@+id/food_item_list_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
             </ListView>
         </ScrollView>
